[package]
name = "rpaste"
version = "0.1.0"
authors = ["Rstar284 <supermanrehan284@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {git = "https://github.com/SergioBenitez/Rocket.git"}
rand = "0.8.4"
uuid = {version = "0.8.2", features = ["v4"]}